--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="en">
 <head>
    <title>Document</title>
+   <style>
+   h1 {
+      background-color: red;
+   }
+   h2 {
+      background-color: orange;
+   }
+   h3 {
+      background-color: yellow;
+   }
+   h4 {
+      background-color: green;
+   }
+   h5 {
+      background-color: blue;
+   }
+   h6 {
+      background-color: purple;
+   }
+   </style>
 </head>
 <body>
    <h1>Hello World!</h1>
