oops, had to fix the colors

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
    <title>Document</title>
    <style>
    h1 {
-      background-color: red;
+      color: red;
    }
    h2 {
-      background-color: orange;
+      color: orange;
    }
    h3 {
-      background-color: yellow;
+      color: yellow;
    }
    h4 {
-      background-color: green;
+      color: green;
    }
    h5 {
-      background-color: blue;
+      color: blue;
    }
    h6 {
-      background-color: purple;
+      color: purple;
    }
    </style>
 </head>
