--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
    <h4>In class!!!!</h4>
    <h5>Without asking for help!!!!!</h5>
    <h6>What a time to be alive.</h6>
+   <img src="https://media.giphy.com/media/l0IyhKF1MNYjKSVs4/giphy.gif" alt="Dealing with it.">
 </body>
 </html>
